changed z-index to prevent modal issues

--- a/scoda/static/src/sass/components/_hero_collapsible.scss
+++ b/scoda/static/src/sass/components/_hero_collapsible.scss
@@ -97,7 +97,7 @@ body {
   }
 
   .tooglebtn {
-    z-index: 1111111111111;
+    z-index: 1;
   }
   .hero-block-vspacer {
     height:5%;
